update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
 /.DS_Store
+*.un~
+*.swp
+out
+target
+logs
+*.log
+dump
+*.ipr
+*.iml
+*/*.iml
+.idea
+*.iws
+*.war
+*.swp
+*~
+*.tld
+*.rdb
+workspace.xml
+lib/build
+lib/compile
+lib/runtime
+lib/test
+test-*
+~$*
