--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Fri Nov 15 18:18:44 CST 2013
+#Fri Nov 15 23:24:48 CST 2013
 app.grails.version=2.3.2
 app.name=sleepy-weasel
+app.servlet.version=3.0
 app.version=0.1
